[gd_scene load_steps=29 format=2]

[ext_resource path="res://Art/Backgrounds/RestingRoom.png" type="Texture" id=1]
[ext_resource path="res://Source/highlight.gd" type="Script" id=2]
[ext_resource path="res://Art/Backgrounds/Animations/lamp.png" type="Texture" id=3]
[ext_resource path="res://Art/Backgrounds/RestingRoomLighting.png" type="Texture" id=4]
[ext_resource path="res://Components/Textures/Bag.png" type="Texture" id=5]
[ext_resource path="res://Art/Sprites/Radio.png" type="Texture" id=6]
[ext_resource path="res://Components/Bag.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/Actions.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/Dialogue.tscn" type="PackedScene" id=9]
[ext_resource path="res://Art/Backgrounds/Animations/boxAnim.png" type="Texture" id=10]
[ext_resource path="res://Source/CRT.tres" type="Material" id=11]
[ext_resource path="res://Sounds/CaveLoop.wav" type="AudioStream" id=12]
[ext_resource path="res://Components/Cursor.tscn" type="PackedScene" id=13]
[ext_resource path="res://Rooms/RestingRoom.gd" type="Script" id=14]
[ext_resource path="res://Art/Backgrounds/Filter.png" type="Texture" id=15]
[ext_resource path="res://Source/RoomButtons.tres" type="Theme" id=16]
[ext_resource path="res://Source/DialogueTheme.tres" type="Theme" id=17]
[ext_resource path="res://Source/timeCard.gd" type="Script" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 300, 200 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 300, 200 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ambience:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "load"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ambience:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -80.0, -10.0, 0.0 ]
}

[node name="world" type="Node2D"]
script = ExtResource( 14 )

[node name="RestingRoom" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="RestingRoomLighting" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="Lamp" type="AnimatedSprite" parent="RestingRoomLighting"]
frames = SubResource( 4 )
frame = 2
playing = true
centered = false
script = ExtResource( 2 )

[node name="item" type="TextureButton" parent="RestingRoomLighting/Lamp"]
margin_left = 72.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="AnimatedSprite" parent="RestingRoomLighting"]
frames = SubResource( 8 )
playing = true
centered = false
script = ExtResource( 2 )

[node name="item" type="TextureButton" parent="RestingRoomLighting/Box"]
margin_left = 175.0
margin_top = 101.0
margin_right = 241.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rest" type="Button" parent="."]
visible = false
margin_left = 157.0
margin_top = 182.0
margin_right = 207.0
margin_bottom = 193.0
focus_mode = 0
theme = ExtResource( 16 )
enabled_focus_mode = 0
text = "> Rest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
visible = false
margin_left = 96.0
margin_top = 182.0
margin_right = 146.0
margin_bottom = 193.0
focus_mode = 0
theme = ExtResource( 16 )
enabled_focus_mode = 0
text = "> Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeCard" type="RichTextLabel" parent="ColorRect"]
margin_top = 94.0
margin_right = 300.0
margin_bottom = 125.0
theme = ExtResource( 17 )
bbcode_enabled = true
bbcode_text = "[center]Day 1 14:00[/center]"
visible_characters = 0
percent_visible = 0.0
text = "Day 1 14:00"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="ColorRect/timeCard"]
wait_time = 0.1

[node name="Radio" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="BagIcon" type="Sprite" parent="."]
position = Vector2( 266, 1 )
texture = ExtResource( 5 )
centered = false
script = ExtResource( 2 )

[node name="item" type="TextureButton" parent="BagIcon"]
margin_top = 1.0
margin_right = 32.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Actions" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 174, 72 )

[node name="Bag" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Cursor" parent="." instance=ExtResource( 13 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/load = SubResource( 10 )

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -80.0
autoplay = true

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Filter" type="Sprite" parent="."]
material = ExtResource( 11 )
texture = ExtResource( 15 )
centered = false

[connection signal="mouse_entered" from="RestingRoomLighting/Lamp/item" to="RestingRoomLighting/Lamp" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="RestingRoomLighting/Lamp/item" to="RestingRoomLighting/Lamp" method="_on_item_mouse_exited"]
[connection signal="pressed" from="RestingRoomLighting/Lamp/item" to="." method="_on_Lamp_pressed"]
[connection signal="mouse_entered" from="RestingRoomLighting/Box/item" to="RestingRoomLighting/Box" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="RestingRoomLighting/Box/item" to="RestingRoomLighting/Box" method="_on_item_mouse_exited"]
[connection signal="pressed" from="RestingRoomLighting/Box/item" to="." method="_on_box_pressed"]
[connection signal="pressed" from="Rest" to="." method="_on_Rest_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="ColorRect/timeCard/Timer" to="ColorRect/timeCard" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="BagIcon/item" to="BagIcon" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="BagIcon/item" to="BagIcon" method="_on_item_mouse_exited"]
[connection signal="pressed" from="BagIcon/item" to="." method="_on_Bag_pressed"]
